syntax="proto3";
package student.examples.grpc;

message UserWithdrawDtoRequest {
    string token = 1;
}

message UserWithdrawResponse {
    string message = 1;
}

service UserWithdrawService {
  rpc withdraw(UserWithdrawDtoRequest) returns (UserWithdrawResponse);
  rpc confirmWithdraw(UserWithdrawDtoRequest) returns (UserWithdrawResponse);
}